tests/snapshots/migration_snapshots__postgres_chunk_checksum.snap
---
source: tests/migration_snapshots.rs
expression: "chunk_checksum_select_sql(MigrationEngine::Postgres, &config)"
---
-- Chunk checksum. Compare row_count and chunk_checksum on both sides before row diff.
SELECT
  COUNT(*) AS row_count,
  COALESCE(SUM(CAST((('x' || SUBSTRING(MD5(CONCAT(CASE WHEN CAST(order_id AS TEXT) IS NULL THEN '__IRODORI_NULL__' ELSE CONCAT('V', CONCAT(LENGTH(CAST(order_id AS TEXT)), ':', CAST(order_id AS TEXT))) END, '', CASE WHEN CAST(CAST(amount AS DECIMAL(38,2)) AS TEXT) IS NULL THEN '__IRODORI_NULL__' ELSE CONCAT('V', CONCAT(LENGTH(CAST(CAST(amount AS DECIMAL(38,2)) AS TEXT)), ':', CAST(CAST(amount AS DECIMAL(38,2)) AS TEXT))) END, '', CASE WHEN TRIM(CAST(status AS TEXT)) IS NULL THEN '__IRODORI_NULL__' ELSE CONCAT('V', CONCAT(LENGTH(TRIM(CAST(status AS TEXT))), ':', TRIM(CAST(status AS TEXT)))) END)), 17))::bit(64)::bigint) AS DECIMAL(38,0))), 0) AS chunk_checksum
FROM public.orders
WHERE order_id >= 1 AND order_id < 1000
