tests/snapshots/migration_snapshots__postgres_to_mysql_source_sql.snap
---
source: tests/migration_snapshots.rs
expression: plan.source_sql
---
-- Row hash manifest query.
SELECT
  order_id,
  line_id,
  amount,
  status,
  sales_dt AS irodori_partition,
  LOWER(MD5(CONCAT_WS('|#|', COALESCE(REGEXP_REPLACE(CAST(order_id AS TEXT), '\s+', ' ', 'g'), '__IRODORI_NULL__'), COALESCE(REGEXP_REPLACE(CAST(line_id AS TEXT), '\s+', ' ', 'g'), '__IRODORI_NULL__')))) AS irodori_key_hash,
  LOWER(MD5(CONCAT_WS('|#|', COALESCE(REGEXP_REPLACE(CAST(order_id AS TEXT), '\s+', ' ', 'g'), '__IRODORI_NULL__'), COALESCE(REGEXP_REPLACE(CAST(line_id AS TEXT), '\s+', ' ', 'g'), '__IRODORI_NULL__'), COALESCE(REGEXP_REPLACE(CAST(amount AS TEXT), '\s+', ' ', 'g'), '__IRODORI_NULL__'), COALESCE(REGEXP_REPLACE(CAST(status AS TEXT), '\s+', ' ', 'g'), '__IRODORI_NULL__')))) AS irodori_row_hash
FROM public.orders
WHERE sales_dt >= '2026-01-01';

-- Fast validation fingerprint. Use this before running row-level diff.
WITH row_hashes AS (
  -- Row hash manifest query.
  SELECT
    order_id,
    line_id,
    amount,
    status,
    sales_dt AS irodori_partition,
    LOWER(MD5(CONCAT_WS('|#|', COALESCE(REGEXP_REPLACE(CAST(order_id AS TEXT), '\s+', ' ', 'g'), '__IRODORI_NULL__'), COALESCE(REGEXP_REPLACE(CAST(line_id AS TEXT), '\s+', ' ', 'g'), '__IRODORI_NULL__')))) AS irodori_key_hash,
    LOWER(MD5(CONCAT_WS('|#|', COALESCE(REGEXP_REPLACE(CAST(order_id AS TEXT), '\s+', ' ', 'g'), '__IRODORI_NULL__'), COALESCE(REGEXP_REPLACE(CAST(line_id AS TEXT), '\s+', ' ', 'g'), '__IRODORI_NULL__'), COALESCE(REGEXP_REPLACE(CAST(amount AS TEXT), '\s+', ' ', 'g'), '__IRODORI_NULL__'), COALESCE(REGEXP_REPLACE(CAST(status AS TEXT), '\s+', ' ', 'g'), '__IRODORI_NULL__')))) AS irodori_row_hash
  FROM public.orders
  WHERE sales_dt >= '2026-01-01'
)
SELECT
  COUNT(*) AS row_count,
  COUNT(DISTINCT CONCAT_WS('|#|', COALESCE(CAST(order_id AS TEXT), '__IRODORI_NULL__'), COALESCE(CAST(line_id AS TEXT), '__IRODORI_NULL__'))) AS key_count,
  MIN(irodori_row_hash) AS min_row_hash,
  MAX(irodori_row_hash) AS max_row_hash
FROM row_hashes;

-- Partition fingerprint. Run row-level diff only for failed partitions.
WITH row_hashes AS (
  -- Row hash manifest query.
  SELECT
    order_id,
    line_id,
    amount,
    status,
    sales_dt AS irodori_partition,
    LOWER(MD5(CONCAT_WS('|#|', COALESCE(REGEXP_REPLACE(CAST(order_id AS TEXT), '\s+', ' ', 'g'), '__IRODORI_NULL__'), COALESCE(REGEXP_REPLACE(CAST(line_id AS TEXT), '\s+', ' ', 'g'), '__IRODORI_NULL__')))) AS irodori_key_hash,
    LOWER(MD5(CONCAT_WS('|#|', COALESCE(REGEXP_REPLACE(CAST(order_id AS TEXT), '\s+', ' ', 'g'), '__IRODORI_NULL__'), COALESCE(REGEXP_REPLACE(CAST(line_id AS TEXT), '\s+', ' ', 'g'), '__IRODORI_NULL__'), COALESCE(REGEXP_REPLACE(CAST(amount AS TEXT), '\s+', ' ', 'g'), '__IRODORI_NULL__'), COALESCE(REGEXP_REPLACE(CAST(status AS TEXT), '\s+', ' ', 'g'), '__IRODORI_NULL__')))) AS irodori_row_hash
  FROM public.orders
  WHERE sales_dt >= '2026-01-01'
)
SELECT
  irodori_partition AS irodori_partition,
  COUNT(*) AS row_count,
  COUNT(DISTINCT CONCAT_WS('|#|', COALESCE(CAST(order_id AS TEXT), '__IRODORI_NULL__'), COALESCE(CAST(line_id AS TEXT), '__IRODORI_NULL__'))) AS key_count,
  MIN(irodori_row_hash) AS min_row_hash,
  MAX(irodori_row_hash) AS max_row_hash
FROM row_hashes
GROUP BY irodori_partition
ORDER BY irodori_partition;
