tests/snapshots/migration_snapshots__postgres_to_mysql_target_sql.snap
---
source: tests/migration_snapshots.rs
expression: plan.target_sql
---
-- Load the exported files with the target engine's bulk loader.
-- Keep the irodori_row_hash column in a staging or manifest table until validation passes.

-- Manifest tables hold source and target row hashes for fast diff.
CREATE OR REPLACE TEMP TABLE irodori_source_manifest (
  order_id VARCHAR(4000),
  line_id VARCHAR(4000),
  irodori_key_hash VARCHAR(4000),
  irodori_row_hash VARCHAR(4000),
  irodori_partition VARCHAR(4000)
);

CREATE OR REPLACE TEMP TABLE irodori_target_manifest (
  order_id VARCHAR(4000),
  line_id VARCHAR(4000),
  irodori_key_hash VARCHAR(4000),
  irodori_row_hash VARCHAR(4000),
  irodori_partition VARCHAR(4000)
);

-- Fast validation fingerprint. Use this before running row-level diff.
WITH row_hashes AS (
  -- Row hash manifest query.
  SELECT
    order_id,
    line_id,
    amount,
    status,
    sales_dt AS irodori_partition,
    LOWER(SHA2(CONCAT_WS('|#|', COALESCE(REGEXP_REPLACE(CAST(order_id AS CHAR), '\s+', ' '), '__IRODORI_NULL__'), COALESCE(REGEXP_REPLACE(CAST(line_id AS CHAR), '\s+', ' '), '__IRODORI_NULL__')), 256)) AS irodori_key_hash,
    LOWER(SHA2(CONCAT_WS('|#|', COALESCE(REGEXP_REPLACE(CAST(order_id AS CHAR), '\s+', ' '), '__IRODORI_NULL__'), COALESCE(REGEXP_REPLACE(CAST(line_id AS CHAR), '\s+', ' '), '__IRODORI_NULL__'), COALESCE(REGEXP_REPLACE(CAST(amount AS CHAR), '\s+', ' '), '__IRODORI_NULL__'), COALESCE(REGEXP_REPLACE(CAST(status AS CHAR), '\s+', ' '), '__IRODORI_NULL__')), 256)) AS irodori_row_hash
  FROM warehouse.orders
  WHERE sales_dt >= '2026-01-01'
)
SELECT
  COUNT(*) AS row_count,
  COUNT(DISTINCT CONCAT_WS('|#|', COALESCE(CAST(order_id AS CHAR), '__IRODORI_NULL__'), COALESCE(CAST(line_id AS CHAR), '__IRODORI_NULL__'))) AS key_count,
  MIN(irodori_row_hash) AS min_row_hash,
  MAX(irodori_row_hash) AS max_row_hash
FROM row_hashes;

-- Partition fingerprint. Run row-level diff only for failed partitions.
WITH row_hashes AS (
  -- Row hash manifest query.
  SELECT
    order_id,
    line_id,
    amount,
    status,
    sales_dt AS irodori_partition,
    LOWER(SHA2(CONCAT_WS('|#|', COALESCE(REGEXP_REPLACE(CAST(order_id AS CHAR), '\s+', ' '), '__IRODORI_NULL__'), COALESCE(REGEXP_REPLACE(CAST(line_id AS CHAR), '\s+', ' '), '__IRODORI_NULL__')), 256)) AS irodori_key_hash,
    LOWER(SHA2(CONCAT_WS('|#|', COALESCE(REGEXP_REPLACE(CAST(order_id AS CHAR), '\s+', ' '), '__IRODORI_NULL__'), COALESCE(REGEXP_REPLACE(CAST(line_id AS CHAR), '\s+', ' '), '__IRODORI_NULL__'), COALESCE(REGEXP_REPLACE(CAST(amount AS CHAR), '\s+', ' '), '__IRODORI_NULL__'), COALESCE(REGEXP_REPLACE(CAST(status AS CHAR), '\s+', ' '), '__IRODORI_NULL__')), 256)) AS irodori_row_hash
  FROM warehouse.orders
  WHERE sales_dt >= '2026-01-01'
)
SELECT
  irodori_partition AS irodori_partition,
  COUNT(*) AS row_count,
  COUNT(DISTINCT CONCAT_WS('|#|', COALESCE(CAST(order_id AS CHAR), '__IRODORI_NULL__'), COALESCE(CAST(line_id AS CHAR), '__IRODORI_NULL__'))) AS key_count,
  MIN(irodori_row_hash) AS min_row_hash,
  MAX(irodori_row_hash) AS max_row_hash
FROM row_hashes
GROUP BY irodori_partition
ORDER BY irodori_partition;
